--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -1,7 +1,7 @@
 # gruvbox-light-soft
-color=#282828
+# color=#282828
 # gruvbox-dark-soft
-# color=#d4be98
+# color=#fbf1c7
 separator=false
 separator_block_width=20
 align=center
@@ -17,7 +17,7 @@ command=~/.config/i3/scripts/keyboard_layout.sh
 interval=1
 
 [brightness]
-label=☀ 
+label=󰃟  
 command=~/.config/i3/scripts/brightness.sh
 interval=1
 
