--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,5 +1,11 @@
-import = [ "~/.config/alacritty/gruvbox_light.toml"
-]
+[colors]
+# light-soft
+primary.background = "#f2e5bc"
+primary.foreground = "#282828"
+
+# dark-medium
+# primary.background = "#282828"
+# primary.foreground = "#fbf1c7"
 
 [shell]
 program = 'zellij'  
@@ -7,28 +13,17 @@ program = 'zellij'
 [env]
 TERM = "xterm-256color"
 
-[font.bold]
-family = "JetBrainsMono Nerd Font"
-style = "Bold"
-
-[font.bold_italic]
-family = "JetBrainsMono Nerd Font"
-style = "Bold Italic"
-
-[font.italic]
-family = "JetBrainsMono Nerd Font"
-style = "Medium Italic"
-
-[font.normal]
-family = "JetBrainsMono Nerd Font"
-style = "Regular"
-
 [font]
 #1440p
 size = 18.0
 
 #1080p
 # size = 11.0
+
+normal = { family = "JetBrainsMono Nerd Font", style = "Regular" }
+bold = { family = "JetBrainsMono Nerd Font", style = "Bold" }
+italic = { family = "JetBrainsMono Nerd Font", style = "Italic" }
+bold_italic = { family = "JetBrainsMono Nerd Font", style = "Bold Italic" }
 
 [selection]
 save_to_clipboard = true
@@ -38,3 +33,5 @@ hide_when_typing = true
 
 [window]
 decorations = "none"
+dynamic_padding = true
+padding = {x = 0, y = 0}
