--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -1,7 +1,7 @@
 # gruvbox-light-soft
-# color=#282828
+color=#654745
 # gruvbox-dark-soft
-# color=#fbf1c7
+# color=#d4be98
 separator=false
 separator_block_width=20
 align=center
