--- a/dark-reader/Dark-Reader-Settings.json
+++ b/dark-reader/Dark-Reader-Settings.json
@@ -14,9 +14,9 @@
         "engine": "dynamicTheme",
         "stylesheet": "",
         "darkSchemeBackgroundColor": "#282828",
-        "darkSchemeTextColor": "#fbf1c7",
+        "darkSchemeTextColor": "#d4be98",
         "lightSchemeBackgroundColor": "#f2e5bc",
-        "lightSchemeTextColor": "#282828",
+        "lightSchemeTextColor": "#654735",
         "scrollbarColor": "auto",
         "selectionColor": "auto",
         "styleSystemControls": false,
