--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -1,7 +1,7 @@
 # gruvbox-light-soft
-# color=#654745
+color=#654745
 # gruvbox-dark-soft
-color=#d4be98
+# color=#d4be98
 separator=false
 separator_block_width=20
 align=center
