--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,27 +1,27 @@
 [colors]
 # light-soft
-# normal.black   = '#654735'
-# normal.red     = '#c14a4a'
-# normal.green   = '#6c782e'
-# normal.yellow  = '#b47109'
-# normal.blue    = '#45707a'
-# normal.magenta = '#945e80'
-# normal.cyan    = '#4c7a5d'
-# normal.white   = '#a89984'
-# primary.background = "#f2e5bc"
-# primary.foreground = "#654735"
+normal.black   = '#654735'
+normal.red     = '#c14a4a'
+normal.green   = '#6c782e'
+normal.yellow  = '#b47109'
+normal.blue    = '#45707a'
+normal.magenta = '#945e80'
+normal.cyan    = '#4c7a5d'
+normal.white   = '#a89984'
+primary.background = "#f2e5bc"
+primary.foreground = "#654735"
 
 # dark-medium
-normal.black   = '#d4be98'
-normal.red     = '#ea6962'
-normal.green   = '#a9b665'
-normal.yellow  = '#d8a657'
-normal.blue    = '#7daea3'
-normal.magenta = '#d3869b'
-normal.cyan    = '#89b482'
-normal.white   = '#7c6f64'
-primary.background = "#282828"
-primary.foreground = "#d4be98"
+# normal.black   = '#d4be98'
+# normal.red     = '#ea6962'
+# normal.green   = '#a9b665'
+# normal.yellow  = '#d8a657'
+# normal.blue    = '#7daea3'
+# normal.magenta = '#d3869b'
+# normal.cyan    = '#89b482'
+# normal.white   = '#7c6f64'
+# primary.background = "#282828"
+# primary.foreground = "#d4be98"
 [terminal.shell]
 program = 'zellij'  
 
