--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,7 +4,7 @@ bind-key C-t send-prefix
 
 set -g default-terminal "tmux-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
-
+set -g mouse on 
 #  close the active window with 'x'
 bind-key x kill-window
 bind-key X kill-pane
