--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,7 +30,7 @@ bind-key o choose-session
 bind-key r command-prompt "rename-window '%%'"
 
 # status line
-set-option -g status-bg "#1d2021"
-set-option -g status-fg "#d4be98" 
+set-option -g status-bg "#ebdbb2"
+set-option -g status-fg "#654735" 
 set-option -g pane-border-style "fg=red"
-set-window-option -g window-status-style "bg=#a9b665,fg=#1d2021"  
+set-window-option -g window-status-style "bg=#d7d9ae,fg=#654735"  
