--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,10 +1,10 @@
 unbind -a
 set-option -g prefix C-t
-bind-key C-t send-prefix
-
+bind-key C-t send-prefix  
 set -g default-terminal "tmux-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 set -g mouse on 
+setw -g aggressive-resize on
 #  close the active window with 'x'
 bind-key x kill-window
 bind-key X kill-pane
@@ -18,9 +18,21 @@ bind-key K select-pane -U
 bind-key L select-pane -R
 
 # Tabs 
-bind-key n new-window
+bind-key n new-window -c "#{pane_current_path}"
 bind-key j previous-window
 bind-key k next-window
+
+# Switch between windows using numbers
+bind-key -n 0 select-window -t 0
+bind-key -n 1 select-window -t 1
+bind-key -n 2 select-window -t 2
+bind-key -n 3 select-window -t 3
+bind-key -n 4 select-window -t 4
+bind-key -n 5 select-window -t 5
+bind-key -n 6 select-window -t 6
+bind-key -n 7 select-window -t 7
+bind-key -n 8 select-window -t 8
+bind-key -n 9 select-window -t 9
 
 # Sessions
 bind-key o choose-session
@@ -33,4 +45,5 @@ bind-key r command-prompt "rename-window '%%'"
 set-option -g status-bg "#ebdbb2"
 set-option -g status-fg "#654735" 
 set-option -g pane-border-style "fg=red"
+set-option -g message-command-style "bg=#d7d9ae,fg=#654735"
 set-window-option -g window-status-style "bg=#d7d9ae,fg=#654735"  
