--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -25,7 +25,8 @@ exec-once = hyprsunset
 exec-once = hyprpm reload -n
 exec-once = tmux setenv -g HYPRLAND_INSTANCE_SIGNATURE "$HYPRLAND_INSTANCE_SIGNATURE"
 
-exec-once = [workspace 1 silent] idea
+exec-once = [workspace 1 silent]  idea
+exec-once = [workspace 2 silent]  chromium
 exec-once = [workspace 10 silent] youtube-music
 exec-once = [workspace 10 silent] telegram-desktop
 
@@ -158,13 +159,55 @@ gestures {
 $mainMod = ALT
 $shiftMod = SHIFT_ALT
 
-
+bind = $mainMod, F, exec, killall -SIGUSR1 waybar
 bind = $shiftMod, Return, exec, $terminal
 bind = $shiftMod, Q, killactive,
 bind = $mainMod, D, exec, $menu
 bind = $mainMod, X, exec, $night
 bind = $mainMod, C, exec, $day
 bind = $mainMod, M, exit,
+
+
+# Resize
+
+bind = $shiftMod, R, exec, hyprctl notify -1 10000 "rgb(ffffff)" "Resize mode: Use HJKL/Arrow keys to resize"
+bind = $shiftMod, R, submap, resize
+
+# Submap for resize mode
+submap = resize
+    bind = , j, exec, hyprctl dispatch resizeactive -10 0
+    bind = , h, exec, hyprctl dispatch resizeactive 0 10
+    bind = , l, exec, hyprctl dispatch resizeactive 0 -10
+    bind = , k, exec, hyprctl dispatch resizeactive 10 0
+    bind = , r, exec, hyprctl dispatch centerwindow
+    # Exit resize mode
+    bind = , escape, submap, reset
+    bind = $mainMod, R, submap, reset
+submap = reset
+
+# Exit 
+bind = $shiftMod, E, exec, hyprctl notify -1 10000 "rgb(ffffff)" " Exit Menu : [L]ogout  [R]eboot  [S]uspend  [H]ibernate  [P]oweroff"
+bind = $shiftMod, E, submap, exit
+
+# Exit submap (like i3's mode)
+submap = exit
+    # Exit options (like i3's bindsym in exit mode)
+    bind = , L, exec, hyprctl dispatch exit  # Logout
+    bind = , R, exec, systemctl reboot       # Reboot
+    bind = , S, exec, systemctl suspend      # Suspend
+    bind = , H, exec, systemctl hibernate    # Hibernate
+    bind = , P, exec, systemctl poweroff     # Poweroff
+
+    # Cancel/Exit mode (like Escape/Return in i3)
+    bind = , escape, submap, reset           # Escape cancels
+    bind = , return, submap, reset           # Enter cancels (optional)
+    
+    # Notification reminder (shows options in a toast)
+    bind = , , exec,  hyprctl notify -1 10000 "rgb(ffffff)"  ""
+    
+    # Fallback: Reset submap if no key is pressed for 3 sec
+    bind = , , submap, reset, timeout 3
+submap = reset
 
 # Focus movement
 bind = $mainMod, J, hy3:movefocus, l
@@ -209,13 +252,15 @@ bind = $mainMod SHIFT, 0, movetoworkspace, 10
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
+
+
 # Media keys
 bindel = , XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
 bindel = , XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bindel = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindel = , XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-bindel = , XF86MonBrightnessUp, exec, brightnessctl s 10%+
-bindel = , XF86MonBrightnessDown, exec, brightnessctl s 10%-
+bindel = , XF86MonBrightnessUp, exec, brightnessctl s 2%+
+bindel = , XF86MonBrightnessDown, exec, brightnessctl s 2%-
 
 # Media playback
 bindl = , XF86AudioNext, exec, playerctl next
@@ -223,9 +268,6 @@ bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
-# Brightness 
-bindel = ,XF86MonBrightnessDown, exec, hyprctl hyprsunset gamma -10
-bindel = ,XF86MonBrightnessUp, exec, hyprctl hyprsunset gamma +10
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
