--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -24,6 +24,7 @@ exec-once = waybar
 exec-once = hyprsunset
 exec-once = hyprpm reload -n
 exec-once = tmux setenv -g HYPRLAND_INSTANCE_SIGNATURE "$HYPRLAND_INSTANCE_SIGNATURE"
+exec-once = nm-applet
 
 exec-once = [workspace 1 silent]  idea
 exec-once = [workspace 2 silent]  chromium
@@ -67,30 +68,7 @@ decoration {
 }
 
 animations {
-    enabled = yes
-
-    bezier = easeOutQuint,0.23,1,0.32,1
-    bezier = easeInOutCubic,0.65,0.05,0.36,1
-    bezier = linear,0,0,1,1
-    bezier = almostLinear,0.5,0.5,0.75,1.0
-    bezier = quick,0.15,0,0.1,1
-
-    animation = global, 1, 10, default
-    animation = border, 1, 5.39, easeOutQuint
-    animation = windows, 1, 4.79, easeOutQuint
-    animation = windowsIn, 1, 4.1, easeOutQuint, popin 87%
-    animation = windowsOut, 1, 1.49, linear, popin 87%
-    animation = fadeIn, 1, 1.73, almostLinear
-    animation = fadeOut, 1, 1.46, almostLinear
-    animation = fade, 1, 3.03, quick
-    animation = layers, 1, 3.81, easeOutQuint
-    animation = layersIn, 1, 4, easeOutQuint, fade
-    animation = layersOut, 1, 1.5, linear, fade
-    animation = fadeLayersIn, 1, 1.79, almostLinear
-    animation = fadeLayersOut, 1, 1.39, almostLinear
-    animation = workspaces, 1, 1.94, almostLinear, fade
-    animation = workspacesIn, 1, 1.21, almostLinear, fade
-    animation = workspacesOut, 1, 1.94, almostLinear, fade
+    enabled = false
 }
 
 master {
@@ -116,14 +94,13 @@ plugin {
         }
 
         autotile {
-            enable = true
-            trigger_width = 800
-            trigger_height = 500
+            enable = false
         }
     }
 }
 
 misc {
+	background_color= rgba(242,229,188,1)
     force_default_wallpaper = -1
     disable_hyprland_logo = true
 	vfr = true
