--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -2,11 +2,11 @@
     "layer": "top",
     "position": "bottom",
     "height": 24,
-    "spacing": 5,
+    "spacing": 0,
 
     "modules-left": ["hyprland/workspaces", "cpu", "memory", "temperature", "disk"],
     "modules-center": ["custom/youtube"],
-    "modules-right": ["pulseaudio", "backlight", "hyprland/language", "network", "battery", "clock", "tray"],
+    "modules-right": ["pulseaudio", "backlight", "hyprland/language", "battery", "clock", "tray"],
 
     "hyprland/workspaces": {
         "format": "<span size='larger'>{icon}</span>",
@@ -22,15 +22,14 @@
             "2": [],
             "3": [],
             "4": [],
-            "5": [],
+            "10": [],
         }
     },
 
 	"custom/youtube": {
 		"exec": "$HOME/.config/waybar/scripts/youtube-music.title.sh",
-		"return-type": "json",
 		"format": "{}",
-		"interval": 5,
+		"interval": 1,
 		"tooltip": false
 	},
 
@@ -40,9 +39,10 @@
 
     "pulseaudio": {
         "format": "\udb81\udd7e  {volume}%",
+		"format-muted": "MUTE",
         "max-volume": 100,
-        "scroll-step": 5,
-        "on-click": "pavucontrol",
+        "scroll-step": 1,
+        "on-click": "$HOME/.config/waybar/scripts/switch-audio.sh",
     },
 
     "battery": {
@@ -52,7 +52,6 @@
 				"warning": 20,
 				"critical": 10
 		},
-		/*"format-time": "{H}:{M:02}",*/
 		"format": "{icon} {capacity}%",
 		"format-charging": " {capacity}%",
 		"format-charging-full": " {capacity}%",
@@ -67,44 +66,31 @@
     },
 
     "backlight": {
-     "device": "intel_backlight",
 	 "format": "{icon} {percent}%",
      "format-icons": ["󱩎", "󱩑", "󱩓", "󱩕", "󰛨"],
-     "format": "\udb80\udcdf  {percent}%"
     },
 
 
     "cpu": {
-        "interval": 5,
+        "interval": 10,
         "format": "\uf4bc  {usage}%", 
     },
 
     "memory": {
-        "interval": 30,
+        "interval": 10,
         "format": "\uefc5  {used:0.1f}G"
     },
 
     "temperature": {
-		"interval": 30,
+		"interval": 10,
         "format": "\uf2c9 {temperatureC}°C"
     },
 
 	"disk": {
-		"interval": 30,
+		"interval": 10,
 		"format": "  {percentage_used}%",
 		"path": "/"
 	},
-
-    "network": {
-        "format": "",
-        "format-ethernet": "\udb83\udc9d",
-        "format-wifi": "{icon}",
-        "format-disconnected": "\udb83\udc9c",
-        "format-icons": ["\udb82\udd2f", "\udb82\udd1f", "\udb82\udd22", "\udb82\udd25", "\udb82\udd28"],
-        "tooltip-format-wifi": "{essid} ({signalStrength}%) {bandwidthDownBits}",
-        "tooltip-format-ethernet": "{ifname} {bandwidthDownBits}",
-        "tooltip-format-disconnected": "Disconnected",
-    },
 
     "hyprland/language": {
         "format": "{short}"
