--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -135,18 +135,22 @@ gestures {
 
 $mainMod = ALT
 $shiftMod = SHIFT_ALT
+$shiftWinMod = SHIFT_SUPER
 
 bind = $mainMod, F, exec, killall -SIGUSR1 waybar
-bind = $shiftMod, Return, exec, $terminal
+bind = $mainMod, Z, Fullscreen
+bind = $mainMod, Return, exec, $terminal
+bind = $shiftMod, Return, exec, $terminal -e tmux new-session -A -s 0
 bind = $shiftMod, Q, killactive,
 bind = $mainMod, D, exec, $menu
 bind = $mainMod, X, exec, $night
 bind = $mainMod, C, exec, $day
-bind = $mainMod, M, exit,
 
+#Screenshot
+bind = ,Print, exec, grim - | wl-copy
+bind = $shiftWinMod, S, exec, grim -g "$(slurp -w 0)" - | wl-copy
 
 # Resize
-
 bind = $shiftMod, R, exec, hyprctl notify -1 10000 "rgb(ffffff)" "Resize mode: Use HJKL/Arrow keys to resize"
 bind = $shiftMod, R, submap, resize
 
