--- a/.ideavimrc
+++ b/.ideavimrc
@@ -1,7 +1,7 @@
 " Base Settings
 " =========================================
 
-j General Settings
+" General Settings
 set scrolloff=8
 set number
 set relativenumber
