--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -148,8 +148,7 @@ bind = $mainMod, C, exec, $day
 
 #Screenshot
 bind = ,Print, exec, grim - | wl-copy
-bind = $shiftWinMod, S, exec, grim -g "$(slurp -w 0)" - | wl-copy
-
+bind = $shiftWinMod, S, exec, grim -g "$(slurp -b 000000B3 -c FFFFFF80 -w 2)" - | wl-copy
 # Resize
 bind = $shiftMod, R, exec, hyprctl notify -1 10000 "rgb(ffffff)" "Resize mode: Use HJKL/Arrow keys to resize"
 bind = $shiftMod, R, submap, resize
