--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -136,10 +136,11 @@ gestures {
 $mainMod = ALT
 $shiftMod = SHIFT_ALT
 $shiftWinMod = SHIFT_SUPER
+$ctrlMod = CTRL_ALT
 
 bind = $mainMod, F, exec, killall -SIGUSR1 waybar
 bind = $mainMod, Z, Fullscreen
-bind = $mainMod, Return, exec, $terminal
+bind = $ctrlMod, Return, exec, $terminal
 bind = $shiftMod, Return, exec, $terminal -e tmux new-session -A -s 0
 bind = $shiftMod, Q, killactive,
 bind = $mainMod, D, exec, $menu
@@ -149,6 +150,7 @@ bind = $mainMod, C, exec, $day
 #Screenshot
 bind = ,Print, exec, grim - | wl-copy
 bind = $shiftWinMod, S, exec, grim -g "$(slurp -b 000000B3 -c FFFFFF80 -w 2)" - | wl-copy
+
 # Resize
 bind = $shiftMod, R, exec, hyprctl notify -1 10000 "rgb(ffffff)" "Resize mode: Use HJKL/Arrow keys to resize"
 bind = $shiftMod, R, submap, resize
@@ -166,28 +168,6 @@ submap = resize
 submap = reset
 
 # Exit 
-bind = $shiftMod, E, exec, hyprctl notify -1 10000 "rgb(ffffff)" " Exit Menu : [L]ogout  [R]eboot  [S]uspend  [H]ibernate  [P]oweroff"
-bind = $shiftMod, E, submap, exit
-
-# Exit submap (like i3's mode)
-submap = exit
-    # Exit options (like i3's bindsym in exit mode)
-    bind = , L, exec, hyprctl dispatch exit  # Logout
-    bind = , R, exec, systemctl reboot       # Reboot
-    bind = , S, exec, systemctl suspend      # Suspend
-    bind = , H, exec, systemctl hibernate    # Hibernate
-    bind = , P, exec, systemctl poweroff     # Poweroff
-
-    # Cancel/Exit mode (like Escape/Return in i3)
-    bind = , escape, submap, reset           # Escape cancels
-    bind = , return, submap, reset           # Enter cancels (optional)
-    
-    # Notification reminder (shows options in a toast)
-    bind = , , exec,  hyprctl notify -1 10000 "rgb(ffffff)"  ""
-    
-    # Fallback: Reset submap if no key is pressed for 3 sec
-    bind = , , submap, reset, timeout 3
-submap = reset
 
 # Focus movement
 bind = $mainMod, J, hy3:movefocus, l
@@ -216,23 +196,21 @@ bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
 # Move window to workspace
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
+bind = $mainMod SHIFT, 1, movetoworkspacesilent, 1
+bind = $mainMod SHIFT, 2, movetoworkspacesilent, 2
+bind = $mainMod SHIFT, 3, movetoworkspacesilent, 3
+bind = $mainMod SHIFT, 4, movetoworkspacesilent, 4
+bind = $mainMod SHIFT, 5, movetoworkspacesilent, 5
+bind = $mainMod SHIFT, 6, movetoworkspacesilent, 6
+bind = $mainMod SHIFT, 7, movetoworkspacesilent, 7
+bind = $mainMod SHIFT, 8, movetoworkspacesilent, 8
+bind = $mainMod SHIFT, 9, movetoworkspacesilent, 9
+bind = $mainMod SHIFT, 0, movetoworkspacesilent, 10
 
 
 # Window move/resize with mouse
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
-
-
 
 # Media keys
 bindel = , XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
