--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -78,6 +78,7 @@ master {
 plugin {
     hy3 {
         tabs {
+			height = 18
             padding = 0
             radius = 0
             border_width = 0
@@ -100,8 +101,8 @@ plugin {
 }
 
 misc {
-	background_color= rgba(242,229,188,1)
-    force_default_wallpaper = -1
+	background_color= rgba(0,0,0,0)
+    force_default_wallpaper = 1
     disable_hyprland_logo = true
 	vfr = true
 }
@@ -137,6 +138,7 @@ $mainMod = ALT
 $shiftMod = SHIFT_ALT
 $shiftWinMod = SHIFT_SUPER
 $ctrlMod = CTRL_ALT
+$notice = hyprctl notify 0 10000000 "rgb(242,229,188)"
 
 bind = $mainMod, F, exec, killall -SIGUSR1 waybar
 bind = $mainMod, Z, Fullscreen
@@ -151,23 +153,41 @@ bind = $mainMod, C, exec, $day
 bind = ,Print, exec, grim - | wl-copy
 bind = $shiftWinMod, S, exec, grim -g "$(slurp -b 000000B3 -c FFFFFF80 -w 2)" - | wl-copy
 
+
 # Resize
-bind = $shiftMod, R, exec, hyprctl notify -1 10000 "rgb(ffffff)" "Resize mode: Use HJKL/Arrow keys to resize"
+bind = $shiftMod, R, exec,  $notice "fontsize:24 Resize mode: Use HJKL/Arrow keys to resize"
 bind = $shiftMod, R, submap, resize
 
 # Submap for resize mode
 submap = resize
-    bind = , j, exec, hyprctl dispatch resizeactive -10 0
-    bind = , h, exec, hyprctl dispatch resizeactive 0 10
-    bind = , l, exec, hyprctl dispatch resizeactive 0 -10
-    bind = , k, exec, hyprctl dispatch resizeactive 10 0
+    bind = , j, exec, hyprctl dispatch resizeactive -100 0
+    bind = , h, exec, hyprctl dispatch resizeactive 0 100
+    bind = , l, exec, hyprctl dispatch resizeactive 0 -100
+    bind = , k, exec, hyprctl dispatch resizeactive 100 0
     bind = , r, exec, hyprctl dispatch centerwindow
     # Exit resize mode
+    bind = , escape, exec, hyprctl dismissnotify
     bind = , escape, submap, reset
-    bind = $mainMod, R, submap, reset
 submap = reset
 
 # Exit 
+bind = $shiftMod, E, exec, $notice "fontsize:24 Exit Menu : [L]ogout  [R]eboot  [S]uspend  [H]ibernate  [P]oweroff"
+bind = $shiftMod, E, submap, exit
+
+# Exit submap (like i3's mode)
+submap = exit
+    # Exit options (like i3's bindsym in exit mode)
+    bind = , L, exec, hyprctl dispatch exit  # Logout
+    bind = , R, exec, systemctl reboot       # Reboot
+    bind = , S, exec, systemctl suspend      # Suspend
+    bind = , H, exec, systemctl hibernate    # Hibernate
+    bind = , P, exec, systemctl poweroff     # Poweroff
+
+    # Cancel/Exit mode (like Escape/Return in i3)
+    bind = , escape, exec, hyprctl dismissnotify
+    bind = , escape, submap, reset           # Escape cancels
+    
+submap = reset
 
 # Focus movement
 bind = $mainMod, J, hy3:movefocus, l
