--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -1,6 +1,6 @@
 color=#654745
 separator=false
-separator_block_width=30
+separator_block_width=10
 align=center
 
 [youtube-music]
@@ -13,16 +13,19 @@ command=~/.config/i3/scripts/brightness.sh
 interval=1
 
 [volume]
-label= 
+interval=once
+signal=1
 command=~/.config/i3/scripts/volume.sh
-interval=1
+
+[simple-2]
+full_text=: :
 
 [battery_status]
 command=~/.config/i3/scripts/battery_status.sh
 interval=1
 
 [date]
-label= 
-command=date '+%a/%d/%b %H:%M:%S'
+command=date '+%a/%d/%b %H:%M:%S '
 interval=1
+
 
