--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -7,14 +7,18 @@ align=center
 command=~/.config/i3/scripts/youtube-music-title.sh
 interval=1
 
+
+[simple-2]
+full_text=: :
+
 [brightness]
-label=󰃟  
+label=󰃟 
 command=~/.config/i3/scripts/brightness.sh
 interval=1
 
 [volume]
-interval=once
-signal=1
+signal=10
+interval=1
 command=~/.config/i3/scripts/volume.sh
 
 [simple-2]
