--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -11,6 +11,17 @@ interval=1
 [simple-2]
 full_text=: :
 
+[ram]
+command=~/.config/i3/scripts/ram_usage.sh
+interval=1
+
+[cpu]
+command=~/.config/i3/scripts/cpu_usage.sh
+interval=1
+
+[simple-2]
+full_text=: :
+
 [brightness]
 label=󰃟 
 command=~/.config/i3/scripts/brightness.sh
