--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -4,11 +4,12 @@ separator_block_width=10
 align=center
 
 [youtube-music]
+label=[ 
 command=~/.config/i3/scripts/youtube-music-title.sh
 interval=1
 
 [simple-2]
-full_text=: :
+full_text=] [
 
 [ram]
 command=~/.config/i3/scripts/ram_usage.sh
@@ -19,10 +20,9 @@ command=~/.config/i3/scripts/cpu_usage.sh
 interval=1
 
 [simple-2]
-full_text=: :
+full_text=] [
 
 [brightness]
-label=󰃟 
 command=~/.config/i3/scripts/brightness.sh
 interval=1
 
@@ -32,14 +32,14 @@ interval=1
 command=~/.config/i3/scripts/volume.sh
 
 [simple-2]
-full_text=: :
+full_text=] [
 
 [battery_status]
 command=~/.config/i3/scripts/battery_status.sh
 interval=1
 
 [date]
-command=date '+%a/%d/%b %H:%M:%S '
+command=date '+%a/%d/%b %H:%M:%S ] '
 interval=1
 
 
