--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -38,6 +38,10 @@ full_text=] [
 command=~/.config/i3/scripts/battery_status.sh
 interval=1
 
+[net]
+command=~/.config/i3/scripts/net.sh
+interval=1
+
 [date]
 command=date '+%a/%d/%b %H:%M:%S ] '
 interval=1
