--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,253 +1,9 @@
-################
-### MONITORS ###
-################
-
-monitor=,preferred,0x0,1
-monitor=HDMI-A-1, disable
-monitor=HDMI-A-2, disable
-
-###################
-### MY PROGRAMS ###
-###################
-
-$terminal = alacritty
-$fileManager = dolphin
-$menu = rofi -modi drun -show drun -config ~/.config/rofi/rofidmenu.rasi
-$day = hyprctl hyprsunset identity
-$night = hyprctl hyprsunset temperature 3000 
-
-#################
-### AUTOSTART ###
-#################
-
-exec-once = waybar
-exec-once = hyprsunset
-exec-once = hyprpm reload -n
-exec-once = tmux setenv -g HYPRLAND_INSTANCE_SIGNATURE "$HYPRLAND_INSTANCE_SIGNATURE"
-
-exec-once = [workspace 1 silent]  idea
-exec-once = [workspace 2 silent]  chromium
-exec-once = [workspace 10 silent] youtube-music
-exec-once = [workspace 10 silent] telegram-desktop
-
-#############################
-### ENVIRONMENT VARIABLES ###
-#############################
-
-env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
-
-#####################
-### LOOK AND FEEL ###
-#####################
-
-general {
-    gaps_in = 0
-    gaps_out = 0
-    border_size = 4
-    col.active_border = rgba(101,71,53,1) 
-    col.inactive_border = rgba(242,229,181,1)
-    resize_on_border = true
-    allow_tearing = false
-    layout = hy3 
-}
-
-decoration {
-    rounding = 0
-    rounding_power = 0
-    active_opacity = 1.0
-    inactive_opacity = 1.0
-    shadow {
-        enabled = false
-    }
-
-    blur {
-        enabled = false
-    }
-}
-
-animations {
-    enabled = false
-}
-
-master {
-    new_status = master
-}
-
-plugin {
-    hy3 {
-        tabs {
-			height = 18
-            padding = 0
-            radius = 0
-            border_width = 0
-            text_height = 12
-            col.active = rgba(213, 196, 161, 1)
-            col.active.border = rgba(213, 196, 161, 1)
-            col.active.text = rgba(101, 71, 53, 1)
-            col.inactive = rgba(242,229,188,1)
-            col.inactive.border = rgba(242,229,188,1)
-            col.inactive.text = rgba(101, 71, 53, 1)
-            col.urgent = rgba(193,74,74,1)
-            col.urgent.border = rgba(193,74,74,1)
-            col.urgent.text = rgba(101, 71, 53, 1)
-        }
-
-        autotile {
-            enable = false
-        }
-    }
-}
-
-misc {
-	background_color= rgba(0,0,0,0)
-    force_default_wallpaper = 1
-    disable_hyprland_logo = true
-	vfr = true
-}
-
-#############
-### INPUT ###
-#############
-
-input {
-    kb_layout = us,se,ru
-    kb_variant =
-    kb_model =
-    kb_options =grp:win_space_toggle
-    kb_rules =
-    follow_mouse = 1
-    sensitivity = 0
-
-    touchpad {
-        natural_scroll = false
-    }
-}
-
-gestures {
-    workspace_swipe = false
-}
-
-
-###################
-### KEYBINDINGS ###
-###################
-
-$mainMod = ALT
-$shiftMod = SHIFT_ALT
-$shiftWinMod = SHIFT_SUPER
-$ctrlMod = CTRL_ALT
-$notice = hyprctl notify 0 10000000 "rgb(242,229,188)"
-
-bind = $mainMod, F, exec, killall -SIGUSR1 waybar
-bind = $mainMod, Z, Fullscreen
-bind = $ctrlMod, Return, exec, $terminal
-bind = $shiftMod, Return, exec, $terminal -e tmux new-session -A -s 0
-bind = $shiftMod, Q, killactive,
-bind = $mainMod, D, exec, $menu
-bind = $mainMod, X, exec, $night
-bind = $mainMod, C, exec, $day
-
-#Screenshot
-bind = ,Print, exec, grim - | wl-copy
-bind = $shiftWinMod, S, exec, grim -g "$(slurp -b 000000B3 -c FFFFFF80 -w 2)" - | wl-copy
-
-
-# Resize
-bind = $shiftMod, R, exec,  $notice "fontsize:24 Resize mode: Use HJKL/Arrow keys to resize"
-bind = $shiftMod, R, submap, resize
-
-# Submap for resize mode
-submap = resize
-    bind = , j, exec, hyprctl dispatch resizeactive -100 0
-    bind = , h, exec, hyprctl dispatch resizeactive 0 100
-    bind = , l, exec, hyprctl dispatch resizeactive 0 -100
-    bind = , k, exec, hyprctl dispatch resizeactive 100 0
-    bind = , r, exec, hyprctl dispatch centerwindow
-    # Exit resize mode
-    bind = , escape, exec, hyprctl dismissnotify
-    bind = , escape, submap, reset
-submap = reset
-
-# Exit 
-bind = $shiftMod, E, exec, $notice "fontsize:24 Exit Menu : [L]ogout  [R]eboot  [S]uspend  [H]ibernate  [P]oweroff"
-bind = $shiftMod, E, submap, exit
-
-# Exit submap (like i3's mode)
-submap = exit
-    # Exit options (like i3's bindsym in exit mode)
-    bind = , L, exec, hyprctl dispatch exit  # Logout
-    bind = , R, exec, systemctl reboot       # Reboot
-    bind = , S, exec, systemctl suspend      # Suspend
-    bind = , H, exec, systemctl hibernate    # Hibernate
-    bind = , P, exec, systemctl poweroff     # Poweroff
-
-    # Cancel/Exit mode (like Escape/Return in i3)
-    bind = , escape, exec, hyprctl dismissnotify
-    bind = , escape, submap, reset           # Escape cancels
-    
-submap = reset
-
-# Focus movement
-bind = $mainMod, J, hy3:movefocus, l
-bind = $mainMod, K, hy3:movefocus, r
-bind = $mainMod, H, hy3:movefocus, d
-bind = $mainMod, L, hy3:movefocus, u
-bind = $shiftMod, J, hy3:movewindow, l
-bind = $shiftMod, K, hy3:movewindow, r
-bind = $shiftMod, H, hy3:movewindow, d
-bind = $shiftMod, L, hy3:movewindow, u
-
-# Tab group switching
-bind = $mainMod, w, hy3:changegroup, tab
-bind = $mainMod, e, hy3:changegroup, untab
-
-# Workspace switching
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
-
-# Move window to workspace
-bind = $mainMod SHIFT, 1, movetoworkspacesilent, 1
-bind = $mainMod SHIFT, 2, movetoworkspacesilent, 2
-bind = $mainMod SHIFT, 3, movetoworkspacesilent, 3
-bind = $mainMod SHIFT, 4, movetoworkspacesilent, 4
-bind = $mainMod SHIFT, 5, movetoworkspacesilent, 5
-bind = $mainMod SHIFT, 6, movetoworkspacesilent, 6
-bind = $mainMod SHIFT, 7, movetoworkspacesilent, 7
-bind = $mainMod SHIFT, 8, movetoworkspacesilent, 8
-bind = $mainMod SHIFT, 9, movetoworkspacesilent, 9
-bind = $mainMod SHIFT, 0, movetoworkspacesilent, 10
-
-
-# Window move/resize with mouse
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
-
-# Media keys
-bindel = , XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
-bindel = , XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bindel = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bindel = , XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-bindel = , XF86MonBrightnessUp, exec, brightnessctl s 2%+
-bindel = , XF86MonBrightnessDown, exec, brightnessctl s 2%-
-
-# Media playback
-bindl = , XF86AudioNext, exec, playerctl next
-bindl = , XF86AudioPause, exec, playerctl play-pause
-bindl = , XF86AudioPlay, exec, playerctl play-pause
-bindl = , XF86AudioPrev, exec, playerctl previous
-
-##############################
-### WINDOWS AND WORKSPACES ###
-##############################
-
-windowrule = suppressevent maximize, class:.*
-windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+source = ~/.config/hypr/autostart.conf
+source = ~/.config/hypr/bindings/media.conf
+source = ~/.config/hypr/bindings/tiling.conf
+source = ~/.config/hypr/bindings/utils.conf
+source = ~/.config/hypr/env.conf
+source = ~/.config/hypr/looknfeel.conf
+source = ~/.config/hypr/input.conf
+source = ~/.config/hypr/monitors.conf
+source = ~/.config/hypr/windows.conf
