--- a/.config/hypr/bindings/tiling.conf
+++ b/.config/hypr/bindings/tiling.conf
@@ -1,6 +1,5 @@
 
 $terminal = alacritty
-$menu = rofi -show drun -config ~/.config/rofi/rofidmenu.rasi
 
 $mainMod = ALT
 $shiftMod = SHIFT_ALT
@@ -13,7 +12,7 @@ bind = $mainMod, Z, Fullscreen
 bind = $ctrlMod, Return, exec, $terminal
 bind = $shiftMod, Return, exec, $terminal -e tmux new-session -A -s 0
 bind = $shiftMod, Q, killactive,
-bind = $mainMod, D, exec, $menu
+bind = $mainMod, D, exec, uwsm app -- $(rofi -show drun -config ~/.config/rofi/rofidmenu.rasi)
 
 
 
