--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,9 +1,9 @@
-source = ~/.config/hypr/autostart.conf
 source = ~/.config/hypr/bindings/media.conf
 source = ~/.config/hypr/bindings/tiling.conf
 source = ~/.config/hypr/bindings/utils.conf
-source = ~/.config/hypr/env.conf
-source = ~/.config/hypr/looknfeel.conf
-source = ~/.config/hypr/input.conf
-source = ~/.config/hypr/monitors.conf
-source = ~/.config/hypr/windows.conf
+source = ~/.config/hypr/general/env.conf
+source = ~/.config/hypr/general/looknfeel.conf
+source = ~/.config/hypr/general/input.conf
+source = ~/.config/hypr/general/monitors.conf
+source = ~/.config/hypr/general/windows.conf
+source = ~/.config/hypr/general/autostart.conf
