--- a/.config/hypr/bindings/utils.conf
+++ b/.config/hypr/bindings/utils.conf
@@ -5,3 +5,5 @@ bind = $mainMod, C, exec, $day
 
 bind = ,Print, exec, grim - | wl-copy
 bind = $shiftWinMod, S, exec, grim -g "$(slurp -b 000000B3 -c FFFFFF80 -w 2)" - | wl-copy
+
+bind = $ctrlMod, L, exec, hyprlock
