--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,63 +1,35 @@
 # Unbind all existing key bindings
 unbind -a
 
-# Set prefix to C-t
-set-option -g prefix C-t
-bind-key C-t send-prefix
+set -a terminal-features "tmux-256color:RGB"
+set -ga terminal-overrides ",xterm-256color:Tc"
 
-# Set default terminal
-set -g default-terminal "tmux-256color"
-set-option -ga terminal-overrides ",xterm-256color:Tc"
-
-# Enable mouse support and aggressive resize
+set -g prefix C-t
+set -g base-index 1
+set -g renumber-windows on
+set -g mode-keys vi
+set -g status-style "bg=#eddeb5"
+set -g status-left "#S "
+set -g status-right ""
+set -g window-status-current-style "fg=black bold, bg=#d7d9ae"
 set -g mouse on
 setw -g aggressive-resize on
 
-# Search upward in the current pane
-bind-key / copy-mode \; command-prompt -p "Search up:" "send -X search-backward '%%'"
+bind g run-shell "tmux new-window -c '#{pane_current_path}' -n 'lazygit' lazygit"
+bind d run-shell "tmux new-window -c '#{pane_current_path}' -n 'lazydocker' lazydocker"
 
-# Search downward in the current pane
-bind-key ? copy-mode \; command-prompt -p "Search down:" "send -X search-forward '%%'"
-
-# Enable searching in copy mode with a sufficient scrollback buffer
-set -g history-limit 10000
-
-# Close the active window with 'x'
-bind-key x kill-window
-bind-key X kill-pane
-
-# Pane splitting and navigation
-bind-key p split-window -h
-bind-key P split-window -v
-bind-key H select-pane -L  
-bind-key J select-pane -D 
-bind-key K select-pane -U
-bind-key L select-pane -R
-
-# Tabs: Create, navigate, and rename
 bind-key n new-window -c "#{pane_current_path}"
 bind-key j previous-window
 bind-key k next-window
 bind-key r command-prompt "rename-window '%%'"
-
-# Window selection with numbers 
-bind-key 0 select-window -t 0
-bind-key 1 select-window -t 1
-bind-key 2 select-window -t 2
-bind-key 3 select-window -t 3
-bind-key 4 select-window -t 4
-bind-key 5 select-window -t 5
-bind-key 6 select-window -t 6
-bind-key 7 select-window -t 7
-bind-key 8 select-window -t 8
-bind-key 9 select-window -t 9
-
-# Session management
+bind-key / copy-mode \; command-prompt -p "Search up:" "send -X search-backward '%%'"
+bind-key ? copy-mode \; command-prompt -p "Search down:" "send -X search-forward '%%'"
+bind-key p split-window -h
+bind-key P split-window -v
+bind-key H select-pane -L
+bind-key J select-pane -D
+bind-key K select-pane -U
+bind-key L select-pane -R
+bind-key x kill-window
+bind-key X kill-pane
 bind-key o choose-session
-
-# Status line customization
-set-option -g status-bg "#ebdbb2"
-set-option -g status-fg "#654735"
-set-option -g pane-border-style "fg=red"
-set-option -g message-command-style "bg=#d7d9ae,fg=#654735"
-set-window-option -g window-status-style "bg=#d7d9ae,fg=#654735"
