--- a/.config/hypr/bindings/tiling.conf
+++ b/.config/hypr/bindings/tiling.conf
@@ -5,7 +5,7 @@ $mainMod = ALT
 $shiftMod = SHIFT_ALT
 $shiftWinMod = SHIFT_SUPER
 $ctrlMod = CTRL_ALT
-$notice = hyprctl notify 0 10000000 "rgb(242,229,188)"
+$notice = notify-send
 
 bind = $mainMod, F, exec, killall -SIGUSR1 waybar
 bind = $mainMod, Z, Fullscreen
@@ -17,7 +17,7 @@ bind = $mainMod, D, exec, uwsm app -- $(rofi -show drun -config ~/.config/rofi/r
 
 
 # Resize
-bind = $shiftMod, R, exec,  $notice "fontsize:24 Resize mode: Use HJKL/Arrow keys to resize"
+bind = $shiftMod, R, exec,  $notice "Resize mode: Use HJKL/Arrow keys to resize"
 bind = $shiftMod, R, submap, resize
 
 # Submap for resize mode
@@ -33,7 +33,7 @@ submap = resize
 submap = reset
 
 # Exit
-bind = $shiftMod, E, exec, $notice "fontsize:24 Exit Menu : [L]ogout  [R]eboot  [S]uspend  [H]ibernate  [P]oweroff"
+bind = $shiftMod, E, exec, $notice "Exit Menu : [L]ogout  [R]eboot  [S]uspend  [H]ibernate  [P]oweroff"
 bind = $shiftMod, E, submap, exit
 
 # Exit submap (like i3's mode)
