--- a/.config/hypr/apps/jetbrains.conf
+++ b/.config/hypr/apps/jetbrains.conf
@@ -1,3 +1,3 @@
-windowrule = size 50% 50%, class:(.*jetbrains.*)$, title:^$,floating:1
-windowrule = noinitialfocus, class:^(.*jetbrains.*)$, title:^\\s$
-windowrule = nofocus, class:^(.*jetbrains.*)$, title:^\\s$
+windowrule = size 50% 50%, noshadow, class:(.*jetbrains.*)$, title:^$,floating:1
+windowrule = noinitialfocus, noshadow, class:^(.*jetbrains.*)$, title:^\\s$
+windowrule = nofocus, noshadow, class:^(.*jetbrains.*)$, title:^\\s$
