--- a/.config/hypr/general/autostart.conf
+++ b/.config/hypr/general/autostart.conf
@@ -1,6 +1,7 @@
 exec-once = uwsm app -- waybar
 exec-once = uwsm app -- hyprsunset
 exec-once = uwsm app -- hypridle
+exec-once = uwsm app -- dunst
 
 exec-once = hyprpm reload -n
 
