--- a/.config/hypr/general/autostart.conf
+++ b/.config/hypr/general/autostart.conf
@@ -2,6 +2,7 @@ exec-once = uwsm app -- waybar
 exec-once = uwsm app -- hyprsunset
 exec-once = uwsm app -- hypridle
 exec-once = uwsm app -- dunst
+exec-once = uwsm app -- fcitx5
 
 exec-once = hyprpm reload -n
 
