--- a/.config/hypr/general/env.conf
+++ b/.config/hypr/general/env.conf
@@ -8,6 +8,8 @@ env = SDL_VIDEODRIVER,wayland
 env = MOZ_ENABLE_WAYLAND,1
 env = ELECTRON_OZONE_PLATFORM_HINT,wayland
 env = OZONE_PLATFORM,wayland
+env = QT_IM_MODULE,fcitx
+env = XMODIFIERS,@im=fcitx
 
 xwayland {
   force_zero_scaling = true
