--- a/.config/hypr/general/input.conf
+++ b/.config/hypr/general/input.conf
@@ -1,8 +1,7 @@
 input {
-    kb_layout = us,se,ru
+    kb_layout = us
     kb_variant =
     kb_model =
-    kb_options =grp:win_space_toggle
     kb_rules =
     follow_mouse = 1
     sensitivity = 0
