--- a/.config/hypr/general/autostart.conf
+++ b/.config/hypr/general/autostart.conf
@@ -6,11 +6,10 @@ exec-once = uwsm app -- fcitx5
 
 exec-once = hyprpm reload -n
 
-# Removes ugly priting when starting tmux
-exec-once = tmux setenv -g HYPRLAND_INSTANCE_SIGNATURE "$HYPRLAND_INSTANCE_SIGNATURE"
 
 exec-once = [workspace 1 silent]  uwsm app -- idea
 exec-once = [workspace 2 silent]  uwsm app -- chromium
+exec-once = [workspace 2 silent]  uwsm app -- firefox
 exec-once = [workspace 10 silent] uwsm app -- youtube-music
 exec-once = [workspace 10 silent] uwsm app -- telegram-desktop
 
