--- a/.config/hypr/general/input.conf
+++ b/.config/hypr/general/input.conf
@@ -11,6 +11,11 @@ input {
     }
 }
 
+misc {
+    key_press_enables_dpms = true
+    mouse_move_enables_dpms = true
+}
+
 gestures {
     workspace = false
 }
